--- a/Client/View/MainWindow.xaml
+++ b/Client/View/MainWindow.xaml
@@ -19,6 +19,6 @@
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Button Grid.Column="3" Grid.Row="0" Margin="5" Command="{Binding Path=asd}"> Open directory for scan</Button>
+        <Button Grid.Column="3" Grid.Row="0" Margin="5" Command="{Binding Path=select_dir_for_scan}"> Open directory for scan</Button>
     </Grid>
 </Window>
