--- a/Client/View/MainWindow.xaml
+++ b/Client/View/MainWindow.xaml
@@ -20,5 +20,7 @@
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Button Grid.Column="3" Grid.Row="0" Margin="5" Command="{Binding Path=select_dir_for_scan}"> Open directory for scan</Button>
+
+        <ListBox></ListBox>
     </Grid>
 </Window>
