--- a/Client/View/MainWindow.xaml
+++ b/Client/View/MainWindow.xaml
@@ -20,9 +20,9 @@
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        <Button Grid.Column="3" Grid.Row="0" Margin="5" Command="{Binding Path=select_dir_for_scan}"> Open directory for scan</Button>
-
-        <ListBox></ListBox>
+        <Button Grid.Column="3" Grid.Row="0" Margin="5" Command="{Binding Path=Select_dir_for_scan}"> Open directory for scan</Button>
+        <Button Click="Button_Click">open registration test</Button>
+       
 
     </Grid>
 </Window>
